# snarky-squirrel

./: .env.aws.example  .env.example  .gitignore  README.md  api.py  docker-compose.yml  error  main.py  model  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-v2.txt
docs/: eval-plan.md  eval-steps.md  setup-aws.md  setup-local.md
infra/dev/: cognito.tf  dynamodb.tf  ec2.tf  iam.tf  outputs.tf  providers.tf  route53.tf  terraform.tfvars.example  user_data.sh.tpl  variables.tf
scripts/: deploy_ec2.sh  eval_golden.py  setup_local.py
src/: __init__.py
src/agents/: __init__.py  code_quality_agent.py  pr_reviewer_agent.py  security_agent.py  summary_agent.py
src/auth/: cognito.py
src/github/: client.py
src/graph/: __init__.py  pr_review_graph.py
src/models/: __init__.py
src/safety/: __init__.py  input_guard.py  output_validator.py
src/tools/: __init__.py  dynamo_memory.py
src/utils/: __init__.py
templates/: index.html  styles.css
tests/: conftest.py  manual_test_local_dynamo.py  test_agents.py  test_regression.py
tests/fixtures/golden/hardcoded_secrets/: diff.txt  expected_findings.json  pr_meta.json
